# s3-csv-merger

./: README.md  pyproject.toml
src/s3_csv_merger/: main.py  s3.py  utils.py
