[tool.poetry]
name = "s3-csv-merger"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "s3_csv_merger", from = "src"}]

[tool.poetry.scripts]
s3-csv-merger = "s3_csv_merger.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
smart-open = "^6.3.0"
boto3 = "^1.26.126"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
